# FastDownloader

./: .gitignore  README.md  pyproject.toml
fastdownloader/: __init__.py  downloader.py
